# Rust-Professional

./: Cargo.toml  report.json
exercises/easy/: algorithm1.rs  algorithm10.rs  algorithm11.rs  algorithm12.rs  algorithm13.rs  algorithm14.rs  algorithm15.rs  algorithm16.rs  algorithm17.rs  algorithm18.rs  algorithm19.rs  algorithm2.rs  algorithm20.rs  algorithm3.rs  algorithm4.rs  algorithm5.rs  algorithm6.rs  algorithm7.rs  algorithm8.rs  algorithm9.rs  mod.rs
exercises/hard/solutiont1/src/: conjecture.rs  tests.rs
exercises/hard/solutiont2/: Cargo.toml
exercises/hard/solutiont2/src/: prime_factor.rs  tests.rs
exercises/hard/solutiont3/: Cargo.toml
exercises/hard/solutiont3/src/: district.rs  tests.rs
exercises/hard/solutiont4/: Cargo.toml
exercises/hard/solutiont4/src/: calc_time.rs  tests.rs
exercises/hard/solutiont5/src/: retirement.rs  tests.rs
exercises/libs/time_utils/: Cargo.toml
exercises/libs/time_utils/src/: chinese_date.rs  date.rs  holiday.rs  lib.rs  utils.rs
exercises/normal/solution1/src/: count_distinct.rs
exercises/normal/solution2/: Cargo.toml
exercises/normal/solution2/src/: converter.rs
exercises/normal/solution3/src/: calc_logic.rs
exercises/normal/solution4/src/: rec_mc.rs  tests.rs
exercises/normal/solution5/src/: fibnacci.rs
