[package]
name = "cargotest"
version = "0.1.0"
edition = "2021"

[lib]
path = "exercises/lib.rs"

[workspace]
members = [
    "exercises/hard/*",
    "exercises/normal/*",
    ".",
    "exercises/libs/time_utils",
]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.0"
termion = "1.5"
log = "0.4"
log4rs = "1.0"
